--- a/QNA/templates/qna_list.html
+++ b/QNA/templates/qna_list.html
@@ -1,38 +1,70 @@
 {% extends 'base.html' %} {% block content %}
 
 <!-- 메인 SECTION -->
-<p>여행 질문 목록</p>
-<br>
-{% if request.user %}
-    <div>
-        <a href="{% url 'q_new' %}">질문하기</a>
-    </div>
-{% endif %}
+<p class="qna_title">여행 질문</p>
+<div class="qna_head">
+    <form action="{%url 'q_search' %}" method="GET">
+        <select class="qna_search_select" id="location" name="location">
+            <option value="국내">국내</option>
+            <option value="북미">북미</option>
+            <option value="남미">남미</option>
+            <option value="유럽">유럽</option>
+            <option value="아시아">아시아</option>
+            <option value="오세아니아">오세아니아</option>
+        </select>
+    <button class="qna_search_submit" type="submit"><i class="fas fa-search"></i></button>
+    </form>
+    
+    {% if request.user %}
+        <a class="qna_head_new" href="{% url 'q_new' %}">질문하기 <i class="fas fa-edit"></i></a>
+    {% endif %}
+</div>
 <br>
 {% if question_list %}
+    <table  class="table table-striped table-hover table-bordered">
+        <thead>
+            <tr>
+            <th scope="col">번호</th>
+            <th scope="col">제목</th>
+            <th scope="col">작성자</th>
+            <th scope="col">작성일</th>
+            </tr>
+        </thead>
+        <tbody>
     {% for question in question_list %}
-        {% if question.vote %}
+        <!-- {% if question.vote %}
             <p>채택된 질문입니다.</p>
-        {% endif %}
-        <h2>{{question.title}}----{{question.answer_set.count}}개의 답변</h2>
-        <span>{{question.writer}}</span>
-        <span>{{question.date}}</span>
-        <a href="{% url 'q_detail' question.id %}">더보기..</a>
-        <br>
-        <br>
+        {% endif %} -->
+        <!-- <a href="{% url 'q_detail' question.id %}" class="question">
+            <div class="question_no question_line">
+                {{question.id}}
+            </div>
+            <div class="question_title question_line">
+                {{question.title}}-{{question.answer_set.count}}
+            </div>
+            <div class="question_writer question_line">
+                {{question.writer}}
+            </div>
+            <div class="question_date question_line">
+                {{question.date}}
+            </div>
+        </a> -->
+            
+                <tr>
+                    <th scope="row">{{question.id}}</th>
+                    <td><a href="{% url 'q_detail' question.id %}">{{question.title}}-{{question.answer_set.count}}</a></td>
+                    <td>{{question.writer}}</td>
+                    <td>{{question.date}}</td>
+                </tr>
     {% endfor %}
+        </tbody>
+    </table>
 {% else %}
-    <h1>질문이 없습니다.</h1>
+<div class="qna_empty">
+    <i class="far fa-sad-tear"></i>
+    <span>게시글이 없습니다...</span>
+</div>
 {% endif %}
-<form action="{%url 'q_search' %}" method="GET">
-    <select id="location" name="location">
-        <option value="국내">국내</option>
-        <option value="북미">북미</option>
-        <option value="남미">남미</option>
-        <option value="유럽">유럽</option>
-        <option value="아시아">아시아</option>
-        <option value="오세아니아">오세아니아</option>
-    </select>
-   <button type="submit">검색하기</button>
-</form>
+<script src="https://kit.fontawesome.com/2eb21cad7a.js" crossorigin="anonymous">
+</script>
 {% endblock%}
