--- a/templates/head.html
+++ b/templates/head.html
@@ -8,6 +8,7 @@
   <!-- PAGE ICON -->
   <link rel="shortcut icon" type="image/x-icon" href="image/main_icon.png" />
   <!-- BOOTSTRAP LINK -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
